# ChronoLattice

./: CMakeLists.txt
prev/: README.md  automacao_37.py  automacao_38.py  comparar_parametro_1.py  gantt_11.py  gantt_12.py  parametros_4.py  poda_por_arranjo.py  poda_por_histograma.py
prev/tarefas/: tarefas_0.txt  tarefas_1.txt  tarefas_2.txt  tarefas_3.txt  tarefas_4.txt  tarefas_5.txt
src/: CMakeLists.txt
src/data/: tarefas.txt
src/include/: ChronoLattice.hpp
src/include/core/: optimizer.hpp  schedule.hpp
src/include/engine/: ChronoLattice.hpp
src/include/parser/: parser.hpp
src/src/: main.cpp
src/src/core/: optimizer.cpp  schedule.cpp
src/src/parser/: parser.cpp
